groovy z-index fix

--- a/home.scss
+++ b/home.scss
@@ -90,6 +90,7 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
+        z-index: 3;
     }
     &.closed {
         display: none;
